    dynamically loaded plugins
 * Added EPrints::CLIProcessor module for handling CLI messages
 * If the time part of the lastmod is null default to 00:00:00, fixing #3243

2008-01-24 tdb
 * Upgrade multiple tables by extending the PRIMARY KEY over the pos field,
    fixing #3235
 * Changed eprint & doc ids in access to INT, changed referring_entity_id to
    LONG, fixing #3128
 * oai_accesslogs script is now *enabled*, but requires that the user be logged
    in and have the 'access-view' role

2008-01-25 tdb
 * Added URI::OpenURL module, to enable the openurl resolver by default

2008-02-01 tdb
 * Fixed typo in oai2 that prevented filters working, fixing #3250
 * Added Export::TextFile superclass to support BOMed outputs, modified EndNote
    export to export in UTF-8, modified RIS export to export in latin-1 (don't
    squash hi-byte chars), fixing #2934
 * Don't fill in autocompletion on tab, fixing #3247

2008-02-04 tdb
 * Re-enabled remote retrieval in XML::DOM's parsefile

2008-02-05 tdb
 * Added support for 'contributors' in DOI import
 * Added export plugin for OpenURL COinS, hidden ContextObject dependencies
 * Added an XSLT processor export plugin and example XSLT

2008-02-06 tdb
 * Only show a "deposit" button for eprints in the inbox
 * Removed debug log message in Platform::exec
 * Added EPrints namespace to <eprints> in XML export
 * Added import/export plugins for XSL transforms
 * Only match whole words as logical operators, fixing #3252
 * Updated to scriptaculous 1.8.1
 * Work-around for autocompletion not working in Opera, fixing #3041

2008-02-07 tdb
 * Don't roll indexer logs on start/stop, only every 24 hours, fixing #2855
 * Fixed doubly-quoted database values
 * Make sure we actually remove index_queue entries, fixing #3256
 * Separated indexer daemon code into a new module, now checks and warns if key
    files aren't writable, fixing #3242

2008-02-11 tdb
 * Fixed indexed field codes not containing stops
