@@ -971,9 +971,9 @@ sub get_sql_index
 {
 	my( $self ) = @_;
 	
-	return undef unless( $self->get_property( "sql_index" ) );
+	return () unless( $self->get_property( "sql_index" ) );
 
-	return "INDEX( ".$self->get_sql_name.")";
+	return ($self->get_sql_name);
 }
 
 
