@@ -57,12 +57,13 @@ sub get_sql_index
 {
 	my( $self ) = @_;
 
-	return undef unless( $self->get_property( "sql_index" ) );
+	return () unless( $self->get_property( "sql_index" ) );
 
-	return "INDEX( ".
-		$self->get_sql_name()."_year, ".
-		$self->get_sql_name()."_month, ".
-		$self->get_sql_name()."_day )";
+	return (
+		$self->get_sql_name()."_year",
+		$self->get_sql_name()."_month",
+		$self->get_sql_name()."_day"
+	);
 }
 
 sub render_single_value
