@@ -54,7 +54,7 @@ sub get_sql_index
 {
 	my( $self ) = @_;
 
-	return undef;
+	return ();
 }
 
 
